evaluation/rq1/sota/mythril/execution_logs/0x0x8a################################9e3fc_eth.txt
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x8a################################9e3fc_eth/SUNToken.sol:54:3: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
  function Ownable() public {
  ^ (Relevant source part starts here and spans across multiple lines).

